--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@ At the intuitive level, an \emph{obfuscator} is a probabilistic polynomial-time 
 %\footnote{The argument consists in a construction of a family of Boolean functions which is inherently unobfuscatable.}.
 Motivated by this impossibility result, the same work~\cite{BGI+12} proposed a weaker notion called \emph{indistinguishability obfuscation} 
 
-An \emph{indistinguishability obfuscator} ($i\mathcal{O}$) is a probabilistic polynomial-time algorithm that takes a circuit~$C$ as  input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs~$x$ and the size of $i\mathcal{O}(C)$ is at most polynomial in the size $C$. Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size \NEWANNE{and that compute the same function,} the obfuscations of both circuits are computationally indistinguishable. An $i\mathcal{O}$ achieves the notion of \emph{best possible obfuscation}, which states that any information that is not hidden by the obfuscated circuit is also not hidden by any  circuit of similar size computing the same functionality~\cite{GR14}. Indistinguishability obfuscation is a very powerful cryptographic tool which has been shown to enable, among others: digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and witness-indistinguishable proofs~\cite{BP15}.
+An \emph{indistinguishability obfuscator} ($i\mathcal{O}$) is a probabilistic polynomial-time algorithm that takes a circuit~$C$ as  input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs~$x$ and the size of $i\mathcal{O}(C)$ is at most polynomial in the size $C$. Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size and that compute the same function, the obfuscations of both circuits are computationally indistinguishable. An $i\mathcal{O}$ achieves the notion of \emph{best possible obfuscation}, which states that any information that is not hidden by the obfuscated circuit is also not hidden by any  circuit of similar size computing the same functionality~\cite{GR14}. Indistinguishability obfuscation is a very powerful cryptographic tool which has been shown to enable, among others: digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and witness-indistinguishable proofs~\cite{BP15}.
 
 The first candidate construction of $i\mathcal{O}$ was published in~\cite{GGH+13}, whose security relied on the presumed hardness of multilinear maps~\cite{CLT13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on  multilinear maps~\cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme was proposed under  different assumptions \cite{AJL+19}. Whether or not this scheme is resistant against quantum attacks remains to be determined.
 
@@ -37,12 +37,12 @@ Our contribution establishes indistinguishability obfuscation for certain famili
 %and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits.
 First, we define indistinguishability obfuscation for quantum circuits ($Qi\mathcal{O}$)(\Cref{sec:QiO-Cliffords and more}). Importantly, this definition specifies that on input a classical description of a quantum circuit~$C_q$, the obfuscator outputs a \emph{pair} $(\rho, C_q^\prime)$, where $\rho$ is a quantum state and $C_q^\prime$ is a quantum circuit, with the property that
 $C_q^\prime(\rho,\ket{\phi})=C_{q}(\ket{\phi})$ for all inputs $\ket{\phi}$.
-\Anne{I am currently thinking that we could let the quantum iO output a pure state, \emph{e.g.}, $\ket{\phi}$, instead of a mixed state $\rho$. This could simplify things later. But I don't know if this is general enough.}
+%\Anne{I am currently thinking that we could let the quantum iO output a pure state, \emph{e.g.}, $\ket{\phi}$, instead of a mixed state $\rho$. This could simplify things later. But I don't know if this is general enough.}
  
 In terms of constructing $Qi\mathcal{O}$, we first focus on the family of \emph{Clifford} circuits and show two methods of obfuscation: one straightforward method based on the canonical representation of Cliffords, and another based on the
 % is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the
 principle of gate teleportation~\cite{GC99}.
-Clifford circuits are quantum circuits that are built from the gateset $\{\xgate, \zgate, \pgate, \cnot, \hgate\}$ . They are known not to be universal for quantum computation and  are, in a certain sense, the quantum equivalent of classical \emph{linear circuits}. It is known that Clifford circuits can be efficiently simulated on a classical computer~\cite{Got98}; however, note that  this simulation is with respect to a \emph{classical} distribution, hence for a purely quantum computation, quantum circuits are required, which motivates the obfuscation of this circuit class. Next,  Clifford circuits are known not to be universal for quantum computation, but they are an important building block for fault-tolerant quantum computing, for instance, due to the fact that Cliffords admit transversal computations on many fault-tolerant codes\cite{BCL+06}.
+Clifford circuits are quantum circuits that are built from the gateset $\{\xgate, \zgate, \pgate, \cnot, \hgate\}$ . They are known not to be universal for quantum computation and  are, in a certain sense, the quantum equivalent of classical \emph{linear circuits}. It is known that Clifford circuits can be efficiently simulated on a classical computer~\cite{Got98}; however, note that  this simulation is with respect to a \emph{classical} distribution, hence for a purely quantum computation, quantum circuits are required, which motivates the obfuscation of this circuit class. Next,  Clifford circuits are known not to be universal for quantum computation, but they are an important building block for fault-tolerant quantum computing, for instance, due to the fact that Cliffords admit transversal computations on many fault-tolerant codes.
 
 \paragraph{Obfuscating Cliffords using a canonical form.} Our first construction of $Qi\mathcal{O}$ for Clifford circuits starts with the well-known fact that a canonical form is an $i\mathcal{O}$. We point out that a canonical form for Clifford circuit was presented in~\cite{AG04}; which completes this construction (we also note that an alternative canonical form was also presented in~\cite{Sel13arxiv}). This canonical form technique  does not require any assumptions. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.
 
@@ -51,10 +51,10 @@ In contrast to the previous scheme, the gate-teleportation scheme requires the a
 
 
 
-\paragraph{Obfuscating Beyond Cliffords} Next, in our main result (\Cref{QiO:Clifford+T:family}), we generalize the gate-teleportation scheme for Clifford circuits, and show a $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford  gates is at most logarithmic in the circuit size. For this, we consider the commonly-used Clifford+$\tgate$ gateset, and we note that the $\tgate$ relates to the $\xgate, \zgate$ as: $\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$. This means that, if we implement a circuit $C$ with $\tgate$-gates as in the gate-teleportation scheme above, then the \emph{correction} function is no longer a simple Pauli update (as in the case for Cliffords). However, this is only partially true: since the Paulis form a basis, there is always a way to represent an update as a complex, linear combination of Pauli matrices. In particular, for the case of a $\tgate$, we note that $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate$. Hence, it \emph{is} possible to produce an update function for general quantum circuits that are encoded via gate teleportation. To illustration this, we first analyze the case of a general Clifford+$\tgate$ quantum circuit on a \emph{single} qubit (\Cref{sec:1-qubit}). Here, we are able to provide $Qi\mathcal{O}$ for all circuits. Next, for general quantum circuits, (\Cref{sec:n-qubit-circuits}), we note that the update function becomes more and more complex as the number of $\tgate$ gates increases. We show that if we limit the number of $\tgate$-gates to be logarithmic in the circuit size, we can nevertheless reach an efficient construction.
+\paragraph{Obfuscating Beyond Cliffords} Next, in our main result (\Cref{QiO:Clifford+T:family}), we generalize the gate-teleportation scheme for Clifford circuits, and show a $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford  gates is at most logarithmic in the circuit size. For this, we consider the commonly-used Clifford+$\tgate$ gateset, and we note that the $\tgate$ relates to the $\xgate, \zgate$ as: $\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$. This means that, if we implement a circuit $C$ with $\tgate$ gates as in the gate-teleportation scheme above, then the \emph{correction} function is no longer a simple Pauli update (as in the case for Cliffords). However, this is only partially true: since the Paulis form a basis, there is always a way to represent an update as a complex, linear combination of Pauli matrices. In particular, for the case of a $\tgate$, we note that $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate$. Hence, it \emph{is} possible to produce an update function for general quantum circuits that are encoded via gate teleportation. To illustration this, we first analyze the case of a general Clifford+$\tgate$ quantum circuit on a \emph{single} qubit (\Cref{sec:1-qubit}). Here, we are able to provide $Qi\mathcal{O}$ for all circuits. Next, for general quantum circuits, (\Cref{sec:n-qubit-circuits}), we note that the update function becomes more and more complex as the number of $\tgate$ gates increases. We show that if we limit the number of $\tgate$ gates to be logarithmic in the circuit size, we can nevertheless reach an efficient construction.
 
 
-We note that,  for many other quantum cryptographic primitives, it is the case that the $\tgate$-gate the bottleneck (somewhat akin to a \emph{multiplication} in the classical case. This has been observed, \emph{e.g.}, in the context of \emph{homomorphic quantum encryption} \cite{BJ15}, instantaneous quantum computation \cite{TODO} and also.... TODO. Because of these applications, and since the $\tgate$ is also typically the bottle neck for fault-tolerant quantum computing, techniques exist to reduce the $\tgate$-count in quantum circuits~\cite{AMMR13,DMM16,AMM14}.
+We note that,  for many other quantum cryptographic primitives, it is the case that the $\tgate$ gate the bottleneck (somewhat akin to a \emph{multiplication} in the classical case. This has been observed, \emph{e.g.}, in the context of \emph{homomorphic quantum encryption} \cite{BJ15}, instantaneous quantum computation \cite{TODO} and also.... TODO. Because of these applications, and since the $\tgate$ is also typically the bottle neck for fault-tolerant quantum computing, techniques exist to reduce the $\tgate$ count in quantum circuits~\cite{AMMR13,DMM16,AMM14}.
 
 
 
