--- a/BuildingQiO-non-clifford.tex
+++ b/BuildingQiO-non-clifford.tex
@@ -189,7 +189,7 @@ Therefore, we must have $k\in O(\log(|C_q|)).$ Note that the above map correspon
 \label{exp:nqubit-correction}
 \sum_{i=1}^{4^k} \beta_i \xgate^{b_{i_1}} \zgate^{a_{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a_{i_n}},\;  \; k\leq n.
 \end{equation}
-where $\beta_i\in\mathbb{C}$ and ${\bf s}_i=a_{i_1}b_{i_1}, \ldots, a_{i_n}b_{i_n} \in\{0,1\}^{2n}.$  Note that there are at most $2^{2n}$ bit strings of size $2n,$ therefore it follows from \Cref{exp:nqubit-correction} that for any $n$-qubit circuit the correction unitary can be written as a summation of at most $2^{2n}$ terms. Note that the range of the update function increases exponentially in the number of $\tgate$-gates for $k\leq n$ but if $k>n$ then the range of update function becomes fixed and no longer depends on $k$ (see \Cref{nqubit:eq0}). However, it is important to realize that the sizes of coefficients $\beta_i$'s (\Cref{nqubit:eq0}) can be increased with each application of a $\tgate$-gate.
+where $\beta_i\in\mathbb{C}$ and ${\bf s}_i=a_{i_1}b_{i_1}, \ldots, a_{i_n}b_{i_n} \in\{0,1\}^{2n}.$  Note that there are at most $2^{2n}$ bit strings of size $2n,$ therefore it follows from \Cref{exp:nqubit-correction} that for any $n$-qubit circuit the correction unitary can be written as a summation of at most $2^{2n}$ terms. Note that the range of the update function increases exponentially in the number of $\tgate$ gates for $k\leq n$ but if $k>n$ then the range of update function becomes fixed and no longer depends on $k$ (see \Cref{nqubit:eq0}). However, it is important to realize that the sizes of coefficients $\beta_i$'s (\Cref{nqubit:eq0}) can be increased with each application of a $\tgate$ gate.
 
 \subsection{Worst-Case Correction Unitary}
 Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we want to evaluate $C_q$ on the state $\ket{\psi}$ using gate teleportation, then we are required to compute a correction unitary $U^\prime$ corresponding to $C_q$ (\Cref{protocol: gate-teleportation}) satisfying \Cref{nqubit:eq6}. We will show that in the worst-case the correction unitary is of form \Cref{exp:nqubit-correction}.
@@ -198,7 +198,7 @@ Let $C_q$ be an $n$-qubit circuit and $\ket{\psi}$ be an $n$-qubit state. If we 
 C_qU(\ket{\psi})= U^\prime C_q (\xgate^{a_{1}}\zgate^{b_{1}}\otimes \xgate^{a_{2}}\zgate^{b_{2}}\cdots \otimes \xgate^{a_{n}}\zgate^{b_{n}})(\ket{\psi}).
 \end{equation}
 
-Let's construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis we assume that $\tgate$-gates are in the first $l$ wires of $C_q,$ and all of $\cnot$ gates are acted after all the $\tgate$-gates \footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.} Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$-gate(s)
+Let's construct $U^\prime$ and estimate how big it can grow. Suppose there are $k\leq n$ number of $\tgate$ gates in $C_q$ for some non-negative integer $k\leq n.$ To simplify the analysis we assume that $\tgate$ gates are in the first $l$ wires of $C_q,$ and all of $\cnot$ gates are acted after all the $\tgate$ gates \footnote{This restriction will not not affect our analysis see remark \cref{remark:nqubit-correction1}.} Note we must have $l\leq k.$ Then for every $j$-th wire with $\tgate$ gate(s)
 
 \begin{equation}
 \begin{aligned}
@@ -225,11 +225,11 @@ C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=1}^{4^l} \b
  =\left(\sum_{j=1}^{4^{l}} \beta_j \xgate^{b_{j1}^\prime}\zgate^{a_{j1}^\prime} \otimes \cdots \otimes\xgate^{b_{jl}^\prime}\zgate^{a_{jl}^\prime} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)
  \end{aligned}
 \end{equation}
-where $\beta_j\in \mathbb{C}$ for $j\in[4^l].$  Recall that $k$ denotes the number of $\tgate$-gates and $l\leq k\leq n,$ therefore in the worst case the correction unitary can have $4^k$ terms.
+where $\beta_j\in \mathbb{C}$ for $j\in[4^l].$  Recall that $k$ denotes the number of $\tgate$ gates and $l\leq k\leq n,$ therefore in the worst case the correction unitary can have $4^k$ terms.
 
 
 
-Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $k\leq n\leq |C_q|$ number of $\tgate$-gates as a map.
+Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $k\leq n\leq |C_q|$ number of $\tgate$ gates as a map.
 \begin{equation}
 \label{nqubit:eq10}
 \begin{aligned}
@@ -240,7 +240,7 @@ Therefore, we define an update function for any $n$-quantum circuit $C_q$ with $
 Which corresponds to the correction unitary defined in \Cref{exp:nqubit-correction}.
 \subsection{Remark}
 \label{remark:nqubit-correction1}
-Note the restriction that $\tgate$-gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $\ell$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients. So our worst-case analysis is not affected by this restriction.
+Note the restriction that $\tgate$ gates are in the first $l$ wires of the circuit has no affect on our analysis. This is because, any permutation of the wires in the circuit will give us $\ell$ terms of form $\sum_{i=1}^4 \lambda_{j_i} \xgate^{a_{j_i}^\prime} \zgate^{b_{j_i}^\prime}$ and $n-l$ terms of the form $\xgate^{a_{i}^\prime} \zgate^{b_{i}^\prime}.$  And the tensor product of these terms in any order will result into a unitary in the worst-case of form. Moreover, $\cnot$ does not increase the number of terms in the update function or affect the size of the coefficients. So our worst-case analysis is not affected by this restriction.
 
 
 \subsection{$Qi\mathcal{O}$ for Unitary Quantum Circuits with Low $\tgate$ gate Complexity}
@@ -255,16 +255,16 @@ The $Qi\mathcal{O}$ construction and proof of its security is identical to the  
 %\label{nqubit-correction-final}
 %\sum_{i=1}^{4^k} \beta_i \xgate^{b{i_1}} \zgate^{a{i_1}}\otimes \cdots \otimes \xgate^{b{i_n}} \zgate^{a{i_n}},\; \beta_i\in\mathbb{C},\; a_{i_j},b_{i_j}\in\{0,1\}.
 %\end{equation}
-%Therefore, if $k\in O(\log(|C_q|)$ (where $k$ is the $\tgate$-count), then the number of terms in the correction unitary \Cref{nqubit-correction-final} are in $O(|C_q|).$
+%Therefore, if $k\in O(\log(|C_q|)$ (where $k$ is the $\tgate$ count), then the number of terms in the correction unitary \Cref{nqubit-correction-final} are in $O(|C_q|).$
 
 
 
 %\begin{remark}
 %\label{remark:nqubit-correction2}
-%Note for any $n$-qubit circuit the correction unitary (relation \Cref{nqubit-correction-final} can have at most $2^{2n}$ terms, regardless how many $\tgate$-gates a circuit has. To realize this suppose we have
+%Note for any $n$-qubit circuit the correction unitary (relation \Cref{nqubit-correction-final} can have at most $2^{2n}$ terms, regardless how many $\tgate$ gates a circuit has. To realize this suppose we have
 %$$C_q (\xgate^{a_{i}}\zgate^{b_{i}})^{\otimes_{i=1}^{n}}=\left(\sum_{j=0}^{l} \beta_j \xgate^{b_{j1}}\zgate^{a_{j1}} \otimes \cdots \otimes\xgate^{b_{jl}}\zgate^{a_{jl}} \otimes \xgate^{a_{l+1}^\prime}\zgate^{b_{l+1}^\prime}  \otimes \cdots   \otimes\xgate^{a_{n}^\prime}\zgate^{b_{n}^\prime}\right)$$
 %for some integer $l>2^{2n}.$
-%But since, there are at most $2^{2n}$ bit strings of size $2n,$ by pigeon hole principle we must have at least $2n-l$ terms that have common binary strings and by adding these common terms we are guaranteed to have every unitary that has at most $2^{2n}$ terms. This means that if the number of terms in the correction unitary grows exponentially (in the worst-case) in the number of $\tgate$-gates $k$ as far as $k\geq n.$ Note the size of the coefficients $\beta_i$ is a function of $\tgate$-gates and will be affected as number of $\tgate$-gates increases. So if there are exponentially many $\tgate$-gates then the size of the $\beta_i$ can also also grow exponentially.
+%But since, there are at most $2^{2n}$ bit strings of size $2n,$ by pigeon hole principle we must have at least $2n-l$ terms that have common binary strings and by adding these common terms we are guaranteed to have every unitary that has at most $2^{2n}$ terms. This means that if the number of terms in the correction unitary grows exponentially (in the worst-case) in the number of $\tgate$ gates $k$ as far as $k\geq n.$ Note the size of the coefficients $\beta_i$ is a function of $\tgate$ gates and will be affected as number of $\tgate$ gates increases. So if there are exponentially many $\tgate$ gates then the size of the $\beta_i$ can also also grow exponentially.
 %\end{remark}
 
 %
